--- a/pubman_logic/src/test/resources/pubman.properties
+++ b/pubman_logic/src/test/resources/pubman.properties
@@ -5,7 +5,7 @@ inge.cone.cache.use=${inge.cone.cache.use}
 
 inge.es.cluster.name = ${inge.es.cluster.name.test}
 inge.es.transport.ips = ${inge.es.transport.ips.test}
-inge.es.rest.host-port = ${inge.es.rest.host-port}
+inge.es.rest.host-port = localhost:9400
 
 inge.index.context.name = ${inge.index.context.name}
 inge.index.context.type = ${inge.index.context.type}
