--- a/inge_es_connector/src/test/resources/es_connector.properties
+++ b/inge_es_connector/src/test/resources/es_connector.properties
@@ -1,6 +1,6 @@
 inge.es.cluster.name = ${inge.es.cluster.name.test}
 inge.es.transport.ips = ${inge.es.transport.ips.test}
-inge.es.rest.host-port = ${inge.es.rest.host-port}
+inge.es.rest.host-port = localhost:9400
 
 inge.index.context.name = ${inge.index.context.name}
 inge.index.context.type = ${inge.index.context.type}
