--- a/pom.xml
+++ b/pom.xml
@@ -276,12 +276,12 @@
 			<dependency>
 				<groupId>org.apache.tika</groupId>
 				<artifactId>tika-core</artifactId>
-				<version>1.23</version>
+				<version>2.7.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.tika</groupId>
-				<artifactId>tika-parsers</artifactId>
-				<version>1.22</version>
+				<artifactId>tika-parsers-standard-package</artifactId>
+				<version>2.7.0</version>
 				<exclusions>
 					<exclusion>
 						<groupId>c3p0</groupId>
@@ -376,14 +376,22 @@
 
 			<!-- Docx4j -->
 			<dependency>
-				<!-- Required for docx4j -->
+				<groupId>org.docx4j</groupId>
+				<artifactId>docx4j-JAXB-ReferenceImpl</artifactId>
+				<version>11.4.8</version>
+			</dependency>
+			<!-- Required for docx4j -->
+			<!--
+			<dependency>
+
 				<groupId>com.googlecode.jaxb-namespaceprefixmapper-interfaces</groupId>
 				<artifactId>JAXBNamespacePrefixMapper</artifactId>
 				<version>2.2.4</version>
 			</dependency>
-
+			-->
+			<!-- Required for docx4j-export-fo -->
+			<!--
 			<dependency>
-				<!-- Required for docx4j-export-fo -->
 				<groupId>org.apache.xmlgraphics</groupId>
 				<artifactId>fop</artifactId>
 				<version>2.2</version>
@@ -406,37 +414,18 @@
 					</exclusion>
 				</exclusions>
 			</dependency>
+			-->
+
 
 			<dependency>
 				<groupId>org.docx4j</groupId>
-				<artifactId>docx4j</artifactId>
-				<version>3.3.6</version>
-				<exclusions>
-					<exclusion>
-						<groupId>log4j</groupId>
-						<artifactId>log4j</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>org.slf4j</groupId>
-						<artifactId>slf4j-log4j12</artifactId>
-					</exclusion>
-				</exclusions>
-			</dependency>
-			<dependency>
-				<groupId>org.docx4j</groupId>
 				<artifactId>docx4j-export-fo</artifactId>
-				<version>3.3.6</version>
-				<exclusions>
-					<exclusion>
-						<groupId>org.apache.xmlgraphics</groupId>
-						<artifactId>fop</artifactId>
-					</exclusion>
-				</exclusions>
+				<version>11.4.8</version>
 			</dependency>
 			<dependency>
 				<groupId>org.docx4j</groupId>
 				<artifactId>docx4j-ImportXHTML</artifactId>
-				<version>3.3.6</version>
+				<version>11.4.8</version>
 			</dependency>
 
 			<!-- Dozer -->
@@ -461,11 +450,6 @@
 				<version>${org.mapstruct.version}</version>
 			</dependency>
 
-			<dependency>
-				<groupId>javax.xml.bind</groupId>
-				<artifactId>jaxb-api</artifactId>
-				<version>2.3.1</version>
-			</dependency>
 
 
 			<!-- Elastic Search -->
@@ -531,6 +515,13 @@
 				<groupId>org.ehcache</groupId>
 				<artifactId>ehcache</artifactId>
 				<version>3.10.8</version>
+				<classifier>jakarta</classifier>
+			</dependency>
+			<!--Required for ehcache-->
+			<dependency>
+				<groupId>org.glassfish.jaxb</groupId>
+				<artifactId>jaxb-runtime</artifactId>
+				<version>3.0.2</version>
 			</dependency>
 			<!-- PostgreSQL -->
 			<dependency>
@@ -538,11 +529,7 @@
 				<artifactId>postgresql</artifactId>
 				<version>42.5.1</version>
 			</dependency>
-			<dependency>
-				<groupId>org.glassfish.jaxb</groupId>
-				<artifactId>jaxb-runtime</artifactId>
-				<version>2.3.6</version>
-			</dependency>
+
 
 			<!-- Jackson -->
 			<dependency>
@@ -1058,9 +1045,9 @@
 					<version>2.6</version>
 				</plugin>
 				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>xmlbeans-maven-plugin</artifactId>
-					<version>2.3.3</version>
+					<groupId>org.apache.xmlbeans</groupId>
+					<artifactId>xmlbeans</artifactId>
+					<version>5.1.1</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
