Caching with EhCache 3 / JCache

--- a/inge_db_connector/src/main/resources/hibernate.properties
+++ b/inge_db_connector/src/main/resources/hibernate.properties
@@ -3,6 +3,8 @@ hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 hibernate.cache.use_second_level_cache=false
 hibernate.cache.use_query_cache=true
 hibernate.cache.region.factory_class=jcache
+hibernate.javax.cache.provider=org.ehcache.jsr107.EhcacheCachingProvider
+hibernate.javax.cache.uri=ehcache.xml
 hibernate.jdbc.time_zone=UTC
 #Speed up startup, do not load all metadata from database
 hibernate.temp.use_jdbc_metadata_defaults=true
