--- a/pom.xml
+++ b/pom.xml
@@ -203,6 +203,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
@@ -238,39 +239,21 @@
 				<artifactId>artemis-server</artifactId>
 				<version>2.28.0</version>
 			</dependency>
-			<!--
-			<dependency>
-				<groupId>org.apache.activemq</groupId>
-				<artifactId>activemq-kahadb-store</artifactId>
-				<version>5.17.3</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.activemq</groupId>
-				<artifactId>activemq-broker</artifactId>
-				<version>5.17.3</version>
-			</dependency>
-			-->
-
-			<dependency>
-				<groupId>org.apache.commons</groupId>
-				<artifactId>commons-lang3</artifactId>
-				<version>3.5</version>
-			</dependency>
 
 			<dependency>
 				<groupId>org.apache.httpcomponents</groupId>
 				<artifactId>httpclient</artifactId>
-				<version>4.5.13</version>
+				<version>4.5.14</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.httpcomponents</groupId>
 				<artifactId>httpmime</artifactId>
-				<version>4.5.2</version>
+				<version>4.5.14</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.httpcomponents</groupId>
 				<artifactId>fluent-hc</artifactId>
-				<version>4.5.2</version>
+				<version>4.5.14</version>
 			</dependency>
 
 			<dependency>
@@ -302,20 +285,24 @@
 				</exclusions>
 			</dependency>
 
-			<dependency>
-				<groupId>org.apache.velocity</groupId>
-				<artifactId>velocity</artifactId>
-				<version>1.7</version>
-			</dependency>
-
 			<!-- Atom, RSS -->
 			<dependency>
 				<groupId>com.rometools</groupId>
 				<artifactId>rome</artifactId>
-				<version>1.8.0</version>
+				<version>2.0.0</version>
 			</dependency>
 
 			<!-- Commons -->
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-lang3</artifactId>
+				<version>3.12.0</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-text</artifactId>
+				<version>1.10.0</version>
+			</dependency>
 			<dependency>
 				<groupId>commons-digester</groupId>
 				<artifactId>commons-digester</artifactId>
@@ -381,42 +368,6 @@
 				<version>11.4.8</version>
 			</dependency>
 			<!-- Required for docx4j -->
-			<!--
-			<dependency>
-
-				<groupId>com.googlecode.jaxb-namespaceprefixmapper-interfaces</groupId>
-				<artifactId>JAXBNamespacePrefixMapper</artifactId>
-				<version>2.2.4</version>
-			</dependency>
-			-->
-			<!-- Required for docx4j-export-fo -->
-			<!--
-			<dependency>
-				<groupId>org.apache.xmlgraphics</groupId>
-				<artifactId>fop</artifactId>
-				<version>2.2</version>
-				<exclusions>
-					<exclusion>
-						<groupId>org.apache.xmlgraphics</groupId>
-						<artifactId>batik-ext</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>xml-apis</groupId>
-						<artifactId>xml-apis</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>xml-apis</groupId>
-						<artifactId>xml-apis-ext</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>org.apache.pdfbox</groupId>
-						<artifactId>fontbox</artifactId>
-					</exclusion>
-				</exclusions>
-			</dependency>
-			-->
-
-
 			<dependency>
 				<groupId>org.docx4j</groupId>
 				<artifactId>docx4j-export-fo</artifactId>
@@ -428,50 +379,14 @@
 				<version>11.4.8</version>
 			</dependency>
 
-			<!-- Dozer -->
-			<!--
-			<dependency>
-				<groupId>com.github.dozermapper</groupId>
-				<artifactId>dozer-core</artifactId>
-				<version>6.5.2</version>
-			</dependency>
-
-
-			<dependency>
-				<groupId>javax.el</groupId>
-				<artifactId>javax.el-api</artifactId>
-				<version>3.0.0</version>
-			</dependency>
-			-->
-
+			<!-- MapStruct -->
 			<dependency>
 				<groupId>org.mapstruct</groupId>
 				<artifactId>mapstruct</artifactId>
 				<version>${org.mapstruct.version}</version>
 			</dependency>
 
-
-
 			<!-- Elastic Search -->
-			<!--
-			<dependency>
-				<groupId>org.elasticsearch</groupId>
-				<artifactId>elasticsearch</artifactId>
-				<version>6.1.1</version>
-			</dependency>
-			<dependency>
-				<groupId>org.elasticsearch.client</groupId>
-				<artifactId>transport</artifactId>
-				<version>6.1.1</version>
-			</dependency>
-			-->
-
-			<dependency>
-				<groupId>org.elasticsearch.client</groupId>
-				<artifactId>elasticsearch-rest-high-level-client</artifactId>
-				<version>7.17.4</version>
-			</dependency>
-
 			<dependency>
 				<groupId>co.elastic.clients</groupId>
 				<artifactId>elasticsearch-java</artifactId>
@@ -484,13 +399,6 @@
 				<artifactId>hibernate-core</artifactId>
 				<version>6.1.7.Final</version>
 			</dependency>
-			<!--
-			<dependency>
-				<groupId>org.hibernate</groupId>
-				<artifactId>hibernate-entitymanager</artifactId>
-				<version>5.6.15.Final</version>
-			</dependency>
-			-->
 			<dependency>
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-jcache</artifactId>
@@ -567,6 +475,7 @@
 			</dependency>
 
 			<!-- Jersey -->
+			<!--
 			<dependency>
 				<groupId>org.glassfish.jersey.core</groupId>
 				<artifactId>jersey-client</artifactId>
@@ -577,6 +486,7 @@
 				<artifactId>jersey-hk2</artifactId>
 				<version>3.1.1</version>
 			</dependency>
+			-->
 			<!--
 			<dependency>
 				<groupId>jakarta.ws.rs</groupId>
@@ -602,13 +512,6 @@
 			</dependency>
 
 			<!-- JSF -->
-			<!--
-			<dependency>
-				<groupId>javax.faces</groupId>
-				<artifactId>javax.faces-api</artifactId>
-				<version>2.2</version>
-			</dependency>
-			-->
 			<dependency>
 				<groupId>org.glassfish</groupId>
 				<artifactId>jakarta.faces</artifactId>
@@ -619,6 +522,15 @@
 				<artifactId>jakarta.enterprise.cdi-api</artifactId>
 				<version>3.0.1</version>
 			</dependency>
+
+			<!-- PrimeFaces -->
+			<dependency>
+				<groupId>org.primefaces</groupId>
+				<artifactId>primefaces</artifactId>
+				<version>11.0.0</version>
+				<classifier>jakarta</classifier>
+			</dependency>
+
 
 			<!-- Json -->
 			<dependency>
@@ -718,13 +630,6 @@
 
 
 
-			<!-- PrimeFaces -->
-			<dependency>
-				<groupId>org.primefaces</groupId>
-				<artifactId>primefaces</artifactId>
-				<version>11.0.0</version>
-				<classifier>jakarta</classifier>
-			</dependency>
 
 			<!-- Pubman Module -->
 			<dependency>
@@ -835,14 +740,7 @@
 				<version>8.7</version>
 			</dependency>
 
-			<!-- Swagger -->
-			<!--
-			<dependency>
-				<groupId>org.springdoc</groupId>
-				<artifactId>springdoc-openapi-ui</artifactId>
-				<version>1.6.14</version>
-			</dependency>
-			-->
+			<!-- Swagger/Springdoc -->
 			<dependency>
 				<groupId>org.springdoc</groupId>
 				<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
@@ -913,7 +811,7 @@
 			<dependency> <!-- Reflections -->
 				<groupId>org.reflections</groupId>
 				<artifactId>reflections</artifactId>
-				<version>0.9.10</version>
+				<version>0.10.2</version>
 			</dependency>
 		</dependencies>
 
