--- a/pubman_presentation/pom.xml
+++ b/pubman_presentation/pom.xml
@@ -106,8 +106,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.apache.velocity</groupId>
-			<artifactId>velocity</artifactId>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-text</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.json</groupId>
