--- a/pom.xml
+++ b/pom.xml
@@ -1183,6 +1183,8 @@
 		<inge.es.transport.ips.test>127.0.0.1:9500</inge.es.transport.ips.test>
 		<inge.es.transport.ips>134.76.28.200:8080</inge.es.transport.ips>
 		<inge.es.rest.host-port>localhost:9400</inge.es.rest.host-port>
+		<inge.es.user></inge.es.user>
+		<inge.es.password></inge.es.password>
 		<inge.filestorage.filesystem_path>/standalone/data/inge_files/</inge.filestorage.filesystem_path>
 		<inge.filestorage.oai.filesystem_path>/standalone/data/inge_oai_files/</inge.filestorage.oai.filesystem_path>
 		<inge.filestorage.seaweed_direct_submit_path>/submit</inge.filestorage.seaweed_direct_submit_path>
