--- a/pubman_logic/src/test/resources/pubman.properties
+++ b/pubman_logic/src/test/resources/pubman.properties
@@ -6,6 +6,8 @@ inge.cone.cache.use=${inge.cone.cache.use}
 inge.es.cluster.name = ${inge.es.cluster.name.test}
 inge.es.transport.ips = ${inge.es.transport.ips.test}
 inge.es.rest.host-port = ${inge.es.rest.host-port}
+inge.es.user=${inge.es.user}
+inge.es.password=${inge.es.password}
 
 inge.index.context.name = ${inge.index.context.name}
 inge.index.context.type = ${inge.index.context.type}
