--- a/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman_ear/src/main/resources/pubman.properties
@@ -106,6 +106,8 @@ inge.email.withauthentication=${inge.email.withauthentication}
 inge.es.cluster.name=${inge.es.cluster.name}
 inge.es.transport.ips=${inge.es.transport.ips}
 inge.es.rest.host-port = ${inge.es.rest.host-port}
+inge.es.user=${inge.es.user}
+inge.es.password=${inge.es.password}
 
 inge.filestorage.filesystem_path=${inge.filestorage.filesystem_path}
 inge.filestorage.oai.filesystem_path=${inge.filestorage.oai.filesystem_path}
