--- a/inge_es_connector/src/test/resources/es_connector.properties
+++ b/inge_es_connector/src/test/resources/es_connector.properties
@@ -1,6 +1,7 @@
 inge.es.cluster.name = ${inge.es.cluster.name.test}
 inge.es.transport.ips = ${inge.es.transport.ips.test}
 inge.es.rest.host-port = ${inge.es.rest.host-port}
+inge.es.rest.path-prefix=${inge.es.rest.path-prefix}
 inge.es.user=${inge.es.user}
 inge.es.password=${inge.es.password}
 
