--- a/pubman_logic/src/test/resources/pubman.properties
+++ b/pubman_logic/src/test/resources/pubman.properties
@@ -6,6 +6,7 @@ inge.cone.cache.use=${inge.cone.cache.use}
 inge.es.cluster.name = ${inge.es.cluster.name.test}
 inge.es.transport.ips = ${inge.es.transport.ips.test}
 inge.es.rest.host-port = ${inge.es.rest.host-port}
+inge.es.rest.path-prefix=${inge.es.rest.path-prefix}
 inge.es.user=${inge.es.user}
 inge.es.password=${inge.es.password}
 
