Elasticsearch: nestedSort II

--- a/pom.xml
+++ b/pom.xml
@@ -1235,7 +1235,7 @@
 		<inge.pubman_presentation.viewFullItem.defaultSize>20</inge.pubman_presentation.viewFullItem.defaultSize>
 		<inge.rest.api.description><![CDATA[This is an automatically generated REST API documentation for PubMan.<br />Please be aware that example values in particular might not be fully correct.<br />Valid examples can be found in <a href="https://colab.mpdl.mpg.de/mediawiki/INGe_REST_API_Documentation" target="_blank" rel="noreferrer noopener">MPDL CoLab</a>.]]></inge.rest.api.description>
 		<inge.rest.file.path>/component</inge.rest.file.path>
-		<inge.search.and.export.default.query>{\"bool\":{\"must\":[{\"term\":{\"publicState\":{\"value\":\"RELEASED\",\"boost\":1.0}}},{\"term\":{\"versionState\":{\"value\":\"RELEASED\",\"boost\":1.0}}},{\"match_all\":{\"boost\":1.0}}],\"adjust_pure_negative\":true,\"boost\":1.0}}</inge.search.and.export.default.query>
+		<inge.search.and.export.default.query>{"bool":{"must":[{"term":{"publicState":{"value":"RELEASED"}}},{"term":{"versionState":{"value":"RELEASED"}}},{"bool":{"should":[{"match":{"metadata.title":{"operator":"and","query":"Laser"}}},{"match":{"metadata.alternativeTitles.value":{"operator":"and","query":"Laser"}}}]}}]}}</inge.search.and.export.default.query>
 		<inge.search.and.export.default.sort.key>metadata.title.keyword</inge.search.and.export.default.sort.key>
 		<inge.search.and.export.default.sort.order>ascending</inge.search.and.export.default.sort.order>
 		<inge.search.and.export.max.limit>5000</inge.search.and.export.max.limit>
