--- a/pubman_logic/src/test/resources/pubman.properties
+++ b/pubman_logic/src/test/resources/pubman.properties
@@ -3,7 +3,7 @@ inge.auth.mpg.ip.use=${inge.auth.mpg.ip.use}
 
 inge.cone.cache.use=${inge.cone.cache.use}
 
-inge.es.rest.host-port = ${inge.es.rest.host-port}
+inge.es.rest.host-port = ${inge.es.rest.host-port.test}
 inge.es.rest.path-prefix=${inge.es.rest.path-prefix}
 inge.es.user=${inge.es.user}
 inge.es.password=${inge.es.password}
