--- a/inge_es_connector/src/test/resources/es_connector.properties
+++ b/inge_es_connector/src/test/resources/es_connector.properties
@@ -1,4 +1,4 @@
-inge.es.rest.host-port = ${inge.es.rest.host-port}
+inge.es.rest.host-port = ${inge.es.rest.host-port.test}
 inge.es.rest.path-prefix=${inge.es.rest.path-prefix}
 inge.es.user=${inge.es.user}
 inge.es.password=${inge.es.password}
