--- a/pubman_logic/src/test/resources/pubman.properties
+++ b/pubman_logic/src/test/resources/pubman.properties
@@ -3,19 +3,19 @@ inge.auth.mpg.ip.use=${inge.auth.mpg.ip.use}
 
 inge.cone.cache.use=${inge.cone.cache.use}
 
-inge.es.rest.host-port = ${inge.es.rest.host-port.test}
-inge.es.rest.path-prefix=${inge.es.rest.path-prefix}
+inge.es.rest.host-port=${inge.es.rest.host-port.test}
+inge.es.rest.path-prefix=${inge.es.rest.path-prefix.test}
 inge.es.user=${inge.es.user}
 inge.es.password=${inge.es.password}
 
-inge.index.context.name = ${inge.index.context.name}
-inge.index.context.type = ${inge.index.context.type}
-inge.index.item.name = ${inge.index.item.name}
-inge.index.item.type = ${inge.index.item.type}
-inge.index.organization.name = ${inge.index.organization.name}
-inge.index.organization.type = ${inge.index.organization.type}
-inge.index.user.name = ${inge.index.user.name}
-inge.index.user.type = ${inge.index.user.type}
+inge.index.context.name=${inge.index.context.name}
+inge.index.context.type=${inge.index.context.type}
+inge.index.item.name=${inge.index.item.name}
+inge.index.item.type=${inge.index.item.type}
+inge.index.organization.name=${inge.index.organization.name}
+inge.index.organization.type=${inge.index.organization.type}
+inge.index.user.name=${inge.index.user.name}
+inge.index.user.type=${inge.index.user.type}
 
 inge.pid.handle.short=${inge.pid.handle.short}
 inge.pid.handle.url=${inge.pid.handle.url}
@@ -35,6 +35,6 @@ inge.database.jdbc.url=${inge.database.jdbc.url.test}
 inge.database.user.name=${inge.database.user.name}
 inge.database.user.password=${inge.database.user.password}
 
-inge.filestorage.oai.filesystem_path = ${inge.filestorage.oai.filesystem_path}
+inge.filestorage.oai.filesystem_path=${inge.filestorage.oai.filesystem_path}
 
-inge.cron.cleanup_staging_files = ${inge.cron.cleanup_staging_files}
+inge.cron.cleanup_staging_files=${inge.cron.cleanup_staging_files}
