--- a/inge_es_connector/src/test/resources/es_connector.properties
+++ b/inge_es_connector/src/test/resources/es_connector.properties
@@ -1,17 +1,17 @@
-inge.es.rest.host-port = ${inge.es.rest.host-port.test}
-inge.es.rest.path-prefix=${inge.es.rest.path-prefix}
+inge.es.rest.host-port=${inge.es.rest.host-port.test}
+inge.es.rest.path-prefix=${inge.es.rest.path-prefix.test}
 inge.es.user=${inge.es.user}
 inge.es.password=${inge.es.password}
 
-inge.index.context.name = ${inge.index.context.name}
-inge.index.context.type = ${inge.index.context.type}
-inge.index.item.name = ${inge.index.item.name}
-inge.index.item.type = ${inge.index.item.type}
-inge.index.organization.name = ${inge.index.organization.name}
-inge.index.organization.type = ${inge.index.organization.type}
-inge.index.user.name = ${inge.index.user.name}
-inge.index.user.type = ${inge.index.user.type}
+inge.index.context.name=${inge.index.context.name}
+inge.index.context.type=${inge.index.context.type}
+inge.index.item.name=${inge.index.item.name}
+inge.index.item.type=${inge.index.item.type}
+inge.index.organization.name=${inge.index.organization.name}
+inge.index.organization.type=${inge.index.organization.type}
+inge.index.user.name=${inge.index.user.name}
+inge.index.user.type=${inge.index.user.type}
 
-inge.database.user.name = ${inge.database.user.name}
-inge.database.user.password = ${inge.database.user.password}
-inge.database.jdbc.url = ${inge.database.jdbc.url.test}
+inge.database.user.name=${inge.database.user.name}
+inge.database.user.password=${inge.database.user.password}
+inge.database.jdbc.url=${inge.database.jdbc.url.test}
