--- a/pom.xml
+++ b/pom.xml
@@ -1037,6 +1037,7 @@
 		<inge.es.password></inge.es.password>
 		<inge.es.rest.host-port.test>localhost:9400</inge.es.rest.host-port.test>
 		<inge.es.rest.host-port>localhost:9200</inge.es.rest.host-port>
+		<inge.es.rest.path-prefix.test></inge.es.rest.path-prefix.test>
 		<inge.es.rest.path-prefix></inge.es.rest.path-prefix>
 		<inge.es.user></inge.es.user>
 		<inge.filestorage.filesystem_path>/standalone/data/inge_files/</inge.filestorage.filesystem_path>
