--- a/pubman_presentation/pom.xml
+++ b/pubman_presentation/pom.xml
@@ -192,7 +192,7 @@
 			</build>
 		</profile>
         <profile>
-            <id>env-iass</id>
+            <id>env-rifs</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
             </activation>
@@ -208,63 +208,63 @@
                                 <merge>
                                     <targetFile>${project.build.outputDirectory}/Label_de.properties</targetFile>
                                     <propertiesFiles>
-                                        <propertiesFile>src/main/resources/iass/Label_de.properties</propertiesFile>
+                                        <propertiesFile>src/main/resources/rifs/Label_de.properties</propertiesFile>
                                         <propertiesFile>src/main/resources/mpg/Label_de.properties</propertiesFile>
                                     </propertiesFiles>
                                 </merge>
                                 <merge>
                                     <targetFile>${project.build.outputDirectory}/Label_en.properties</targetFile>
                                     <propertiesFiles>
-                                        <propertiesFile>src/main/resources/iass/Label_en.properties</propertiesFile>
+                                        <propertiesFile>src/main/resources/rifs/Label_en.properties</propertiesFile>
                                         <propertiesFile>src/main/resources/mpg/Label_en.properties</propertiesFile>
                                     </propertiesFiles>
                                 </merge>
                                 <merge>
                                     <targetFile>${project.build.outputDirectory}/Label_ja.properties</targetFile>
                                     <propertiesFiles>
-                                        <propertiesFile>src/main/resources/iass/Label_ja.properties</propertiesFile>
+                                        <propertiesFile>src/main/resources/rifs/Label_ja.properties</propertiesFile>
                                         <propertiesFile>src/main/resources/mpg/Label_ja.properties</propertiesFile>
                                     </propertiesFiles>
                                 </merge>
                                 <merge>
                                     <targetFile>${project.build.outputDirectory}/Messages_de.properties</targetFile>
                                     <propertiesFiles>
-                                        <propertiesFile>src/main/resources/iass/Messages_de.properties</propertiesFile>
+                                        <propertiesFile>src/main/resources/rifs/Messages_de.properties</propertiesFile>
                                         <propertiesFile>src/main/resources/Messages_de.properties</propertiesFile>
                                     </propertiesFiles>
                                 </merge>
                                 <merge>
                                     <targetFile>${project.build.outputDirectory}/Messages_en.properties</targetFile>
                                     <propertiesFiles>
-                                        <propertiesFile>src/main/resources/iass/Messages_en.properties</propertiesFile>
+                                        <propertiesFile>src/main/resources/rifs/Messages_en.properties</propertiesFile>
                                         <propertiesFile>src/main/resources/Messages_en.properties</propertiesFile>
                                     </propertiesFiles>
                                 </merge>
                                 <merge>
                                     <targetFile>${project.build.outputDirectory}/Messages_ja.properties</targetFile>
                                     <propertiesFiles>
-                                        <propertiesFile>src/main/resources/iass/Messages_ja.properties</propertiesFile>
+                                        <propertiesFile>src/main/resources/rifs/Messages_ja.properties</propertiesFile>
                                         <propertiesFile>src/main/resources/Messages_ja.properties</propertiesFile>
                                     </propertiesFiles>
                                 </merge>
                                 <merge>
                                     <targetFile>${project.build.outputDirectory}/Tooltip_de.properties</targetFile>
                                     <propertiesFiles>
-                                        <propertiesFile>src/main/resources/iass/Tooltip_de.properties</propertiesFile>
+                                        <propertiesFile>src/main/resources/rifs/Tooltip_de.properties</propertiesFile>
                                         <propertiesFile>src/main/resources/Tooltip_de.properties</propertiesFile>
                                     </propertiesFiles>
                                 </merge>
                                 <merge>
                                     <targetFile>${project.build.outputDirectory}/Tooltip_en.properties</targetFile>
                                     <propertiesFiles>
-                                        <propertiesFile>src/main/resources/iass/Tooltip_en.properties</propertiesFile>
+                                        <propertiesFile>src/main/resources/rifs/Tooltip_en.properties</propertiesFile>
                                         <propertiesFile>src/main/resources/Tooltip_en.properties</propertiesFile>
                                     </propertiesFiles>
                                 </merge>
                                 <merge>
                                     <targetFile>${project.build.outputDirectory}/Tooltip_ja.properties</targetFile>
                                     <propertiesFiles>
-                                        <propertiesFile>src/main/resources/iass/Tooltip_ja.properties</propertiesFile>
+                                        <propertiesFile>src/main/resources/rifs/Tooltip_ja.properties</propertiesFile>
                                         <propertiesFile>src/main/resources/Tooltip_ja.properties</propertiesFile>
                                     </propertiesFiles>
                                 </merge>
@@ -286,7 +286,7 @@
                             <webResources>
                                 <resource>
                                     <targetPath>/home</targetPath>
-                                    <directory>${project.basedir}/src/main/webapp/home/iass</directory>
+                                    <directory>${project.basedir}/src/main/webapp/home/rifs</directory>
                                     <includes>
                                         <include>StartPageLoggedIn.jspf</include>
                                         <include>StartPageLoggedOut.jspf</include>
