--- a/citation_style_language_manager/pom.xml
+++ b/citation_style_language_manager/pom.xml
@@ -62,6 +62,10 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-text</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 		</dependency>
