--- a/citationmanager/pom.xml
+++ b/citationmanager/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>de.mpg.mpdl.inge</groupId>
 		<artifactId>INGe</artifactId>
-		<version>8.5.2-SNAPSHOT</version>
+		<version>8.5.2</version>
 	</parent>
 
 	<artifactId>citationmanager</artifactId>
@@ -16,7 +16,7 @@
 		<connection>scm:git:https://github.com/MPDL/INGe.git</connection>
 		<developerConnection>scm:git:https://github.com/MPDL/INGe.git</developerConnection>
 		<url>https://github.com/MPDL/INGe</url>
-		<tag>HEAD</tag>
+		<tag>INGe-8.5.2</tag>
 	</scm>
 
 	<build>
